# super-tux-brawl

./: .dir-locals.el  .gitignore  README.md  gen.py  gen.sh  meson.build
example/: client  client.c  server  server.c
src/: arena.c  arena.h  camera.c  camera.h  client.c  client.h  config.c  config.h  da.c  da.h  gpu_pipeline.c  gpu_pipeline.h  inc.c  inc.h  input.h  main.c  net.c  net.h  network.c  network.h  platform.c  platform.h  renderer.c  renderer.h  resource_loader.c  resource_loader.h  server.c  state.c  state.h  vec.h  world.c  world.h
src/client/: client.c  client.h  client_net.c  client_net.h
src/net/: client.c  net.c  net.h  server.c
src/network/: network.c  network.h  network_queue.c  network_queue.h  packet.h  server_handler.c  server_handler.h
src/platform/: gpu_pipeline.c  gpu_pipeline.h  platform.c  platform.h
src/server/: server.c  server.h
src/shaders/: blue.frag.glsl  colored.frag.glsl  fullscreen_world.vert.glsl  quad.vert.glsl
src/util/: arena.h  config.c  config.h  da.c  da.h  gmath.h  logger.c  logger.h  resource_loader.c  resource_loader.h  vec.h
